# QuickTransType

./: .gitignore  Cargo.toml  LICENSE  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
src/: App.svelte
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  config.rs  database.rs  error.rs  hotkey.rs  key_listener.rs  lib.rs  llm.rs  main.rs  state.rs  text_handler.rs
src/lib/: History.svelte  Performance.svelte  Settings.svelte
src/lib/components/: Toast.svelte
src/lib/settings/: HotkeySettings.svelte  LLMSettings.svelte  LanguageSettings.svelte
src/lib/stores/: appState.ts
