[package]
name = "quick_trans_type"
version = "0.1.0"
description = "AI-powered translation assistant"
authors = ["Aeovy"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "quick_trans_type_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5", features = [] }

[dependencies]
# Tauri 核心和插件
tauri = { version = "2.9", features = ["tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-store = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-shell = "2"

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 异步运行时
tokio = { version = "1.35", features = ["full"] }
futures-util = "0.3"

# HTTP 客户端
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"] }

# 数据库
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }

# 错误处理和日志
anyhow = "1.0"
thiserror = "2.0.17"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
log = "0.4"

# 剪贴板
arboard = "3.4"

# 输入监听
rdev = "0.5"

# 时间处理
chrono = { version = "0.4", features = ["serde"] }

# 目录
dirs = "6.0.0"

# plist 解析 (用于冲突检测)
plist = "1.6"

# macOS 辅助功能权限检查
[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26"
objc = "0.2"

# Windows 键盘模拟
[target.'cfg(target_os = "windows")'.dependencies]
enigo = "0.6"

[features]
default = ["desktop"]
desktop = []
